Rework implements of handler to Manage level class decrease every manual process into manager call